Fix text cut off FF

--- a/client/blocks/reader-related-card-v2/style.scss
+++ b/client/blocks/reader-related-card-v2/style.scss
@@ -335,7 +335,7 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 	display: -webkit-box;
 	-webkit-line-clamp: 1;
 	-webkit-box-orient: vertical;
-	max-height: 22px;
+	max-height: 23px;
 	overflow: hidden;
 	position: relative;
 
